# glfw

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  dll.go  dll_test.go  generate_test.go  glfw.go  glfw3.go  glfw_test.go  go.mod  go.sum  init.go
.github/workflows/: go.yml
cmd/: main.go
codegen/: bind_test.go  macros_decode.go
codegen/include/GLFW/: glfw3.h
